<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.picturedraw.PictureDrawFragment">

    <Button
        android:id="@+id/select_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="11dp"
        android:text="@string/board_config_picture"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/picture"
        app:layout_constraintStart_toStartOf="@+id/picture"
        app:layout_constraintTop_toBottomOf="@+id/picture" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/picture_change"
        app:layout_constraintEnd_toEndOf="@+id/project_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/project_name"
        app:layout_constraintTop_toBottomOf="@+id/project_name"
        app:srcCompat="@drawable/placeholder" />

    <EditText
        android:id="@+id/project_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@android:string/untitled"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_project"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

</androidx.constraintlayout.widget.ConstraintLayout>